inst/builtin/bs5/shiny/_rules.scss
/*-- scss:rules --*/
@import "ionrangeslider/_rules.scss";
@import "tables/_rules.scss";

$web-font-path: "https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Source+Code+Pro:ital,wght@0,400;0,600;1,400;1,600&display=swap" !default;
@if $web-font-path {
  @import url($web-font-path);
}

// move checkbox and radio text slightly to the right
$bslib-checkbox-radio-margin-right: 0.35em !default;

.checkbox,
.radio {
  input {
    margin-right: $bslib-checkbox-radio-margin-right;
  }
}

// make non-selected items slightly different visually (but still 3:1 contrast)
// TODO: Restore this if we fix https://github.com/rstudio/shiny/issues/3839
// .selectize-dropdown-content .option.active {
//   background-color: tint-color($blue, 25%);
//   color: $white;
// }

// fix "to" width in the middle of the date picker
.shiny-date-range-input .input-daterange .input-group-addon {
  margin-right: -1px;
}

// Make the default action button an outline variant, but not others
.btn-outline-default,
.btn-default:not(.btn-primary, .btn-secondary, .btn-info, .btn-success, .btn-danger, .btn-warning, .btn-light, .btn-dark, .btn-link, [class*="btn-outline-"]) {
  @include button-outline-variant($secondary);
}

@if $enable-dark-mode {
  @include color-mode(dark) {
    .btn-outline-default,
    .btn-default:not(.btn-primary, .btn-secondary, .btn-info, .btn-success, .btn-danger, .btn-warning, .btn-light, .btn-dark, .btn-link, [class*="btn-outline-"]) {
      @include button-outline-variant($dark-text-emphasis-dark);
    }
  }
}

// By default, non-active .nav links reflect the primary color. This styling
// tweak brings them closer to how they'll appear in a navbar. 
.nav-underline {
  --bs-link-color: rgba(var(--bs-body-color-rgb), 0.65); 
  --bs-link-hover-color: rgba(var(--bs-body-color-rgb), 0.8);
}

// This next section fixes inline checkbox and radio groups.
// TODO: It would be nice to do this for all inline groups, but that would
// require updating the input markup to use <fieldset> and <legend>.
.shiny-input-container-inline {
  .shiny-options-group {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    column-gap: 1em;

    .checkbox-inline, .radio-inline {
      position: relative;
      padding-left: calc(#{$form-check-input-width} + #{$bslib-checkbox-radio-margin-right} * 2);

      input {
        position: absolute;
        margin-top: 0;
        left: 0;
        top: calc(#{($line-height-base - $form-check-input-width) * .5} + #{$input-btn-border-width});
      }
    }
  }
}

$icon-classes: ("bi", "fa", "fas", "far", "fab", "material-icons") !default;

.bslib-value-box.default .value-box-showcase {
  > i {
    @each $icon-class in $icon-classes {
      &.#{$icon-class} {
        background: linear-gradient(140deg, $blue 36%, $purple 180%) $blue;
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
      }
    }
  }
  > svg {
    @each $icon-class in $icon-classes {
      &.#{$icon-class} {
        // Requires icon-gradient.svg which is added in the value_box() dependency
        fill: url('#bslib---icon-gradient') $blue !important;
      }
    }
  }
}


.bslib-value-box {
  $cyan: #028097; // Contrast 4.63
  $warning: #A87600; // Contrast 4 (okay for 16px+ text)

  &.text-info {
    &, &.text-cyan {
      --bslib-color-fg: $cyan !important;
    }
    color: $cyan !important;
  }

  &.text-light {
    --bslib-color-fg: $gray-600 !important;
  }

  &.text-warning {
    &, &.text-yellow {
      --bslib-color-fg: $warning !important;
    }
    color: $warning !important;
  }

  &.text-teal.text-teal {
    --bslib-color-fg: #008558; // Contrast 4.67
  }
}

